Start exe building