@@ -14,20 +14,51 @@
     </properties>
 
     <dependencies>
+
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
-            <version>11</version>
+            <version>11.0.1</version>
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-fxml</artifactId>
-            <version>11</version>
+            <version>11.0.1</version>
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-media</artifactId>
-            <version>11</version>
+            <version>11.0.1</version>
+        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.openjfx</groupId>-->
+<!--            <artifactId>javafx-web</artifactId>-->
+<!--            <version>11.0.2</version>-->
+<!--        </dependency>-->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.4.200</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>5.3.7.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish.jaxb</groupId>
+            <artifactId>jaxb-runtime</artifactId>
+            <version>2.3.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.controlsfx</groupId>
+            <artifactId>controlsfx</artifactId>
+            <version>11.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.fxmisc.richtext</groupId>
+            <artifactId>richtextfx</artifactId>
+            <version>0.10.6</version>
         </dependency>
     </dependencies>
 <build>
@@ -36,10 +67,29 @@
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-maven-plugin</artifactId>
             <version>0.0.2</version>
-            <configuration>
-                <mainClass>sample.Main</mainClass>
-                <executable>"C:\Program Files\Java\jdk-11.0.2\bin\java.exe"</executable>
-            </configuration>
+            <executions>
+                <execution>
+                    <id>run</id>
+                    <configuration>
+                        <mainClass>sample.Main</mainClass>
+                        <options>
+                            <option>--add-exports</option>
+                            <option>javafx.base/com.sun.javafx.event=org.controlsfx.controls</option>
+                        </options>
+                    </configuration>
+                </execution>
+                <execution>
+                    <id>debug</id>
+                    <configuration>
+                        <mainClass>sample.Main</mainClass>
+                        <options>
+                            <option>-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=*:54189</option>
+                            <option>--add-exports</option>
+                            <option>javafx.base/com.sun.javafx.event=org.controlsfx.controls</option>
+                        </options>
+                    </configuration>
+                </execution>
+            </executions>
         </plugin>
     </plugins>
 </build>
